# macon

./: .gitignore  Cargo.toml  README.md  TODO.md  start_arango.sh
cag/: Cargo.toml
cag/src/: base_creator.rs  error.rs  lib.rs  prelude.rs
cag/src/utils/: config.rs  mod.rs
macon/: Cargo.toml
macon/src/: classifier.rs  cli.rs  main.rs  utils.rs
macon/src/graph_creators/: mod.rs
macon/src/graph_creators/focused_graph/: coper.rs  mintsloader.rs  mod.rs
macon/src/graph_creators/focused_graph/carnavalheist/: mod.rs  nodes.rs
macon/src/graph_creators/focused_graph/coper/: mod.rs
macon/src/graph_creators/focused_graph/dark_watchmen/: mod.rs  nodes.rs
macon/src/graph_creators/focused_graph/mintsloader/: mod.rs  nodes.rs
macon/src/graph_creators/focused_graph/nodes/: coper.rs  mintsloader.rs  mod.rs
macon/src/graph_creators/general_graph/: evaluation.rs  general.rs  mod.rs
zip/: Cargo.toml
zip/src/: lib.rs  types.rs
