[package]
name = "macon-cag"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
arangors = { version = "0.6.0", features = ["blocking", "reqwest_blocking"], default-features = false }
chrono = "0.4.31"
schemars = "0.8.16"
serde = "1.0.193"
serde_json = "1.0.108"
thiserror = "1.0.50"

[dev-dependencies]
tqdm = "0.6.0"
