[package]
name = "macon"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
arangors = { version = "0.6.0", features = ["blocking", "reqwest_blocking"], default-features = false }
base64 = "0.22.1"
clap = { version = "4.5.48", features = ["derive"] }
fast-tlsh = { version = "0.1.10", features = ["easy-functions"] }
flate2 = "1.1.4"
indicatif = { version = "0.18.0", features = ["rayon"] }
lavinhash = "1.0.1"
lazy_static = "1.5.0"
macon-cag = { version = "0.1.0", path = "../cag" }
macon-zip = { version = "0.1.0", path = "../zip" }
rayon = "1.11.0"
regex = "1.12.2"
schemars = "0.8.16"
serde = "1.0.193"
serde_json = "1.0.108"
sha256 = "1.6.0"
shunting = "0.1.2"
smartcore = "0.4.9"
ssdeep = "0.7.0"
tqdm = "0.8.0"
zip = "5.1.1"
